--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,20 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 dnacentersdk==2.0.2
+docx==0.2.4
+et-xmlfile==1.1.0
 fastjsonschema==2.15.0
 Flask==1.1.2
 future==0.18.2
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
+lxml==4.6.3
 MarkupSafe==1.1.1
+openpyxl==3.0.9
+Pillow==8.2.0
+python-docx==0.8.11
+ratelimit==2.2.1
 requests==2.25.1
 requests-toolbelt==0.9.1
 urllib3==1.26.4
